src/objects/Recipe__c.object
<CustomObject>
    <description>Represents the recipes and contains the elements related to them as ingredients, instructions and the relationship with the corresponding brand</description>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Determine which cluster is associated with the recipe.</description>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Recipes</relationshipLabel>
        <relationshipName>Recipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Recipes</relationshipLabel>
        <relationshipName>Recipes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Autocompleted/editable field based on Name and Cluster External Id for import/export purposes.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Recipe</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recipe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Clustering__c</fullName>
        <label>Clustering</label>
    </sharingReasons>
</CustomObject>